css/styles.css
/* ... */
.divider-custom .divider-custom-line:last-child {
  margin-left: 1rem;
}
.divider-custom .divider-custom-icon {
  color: #fff;
  font-size: 2rem;
}
.divider-custom.divider-light .divider-custom-line {
  background-color: #fff;
}
.divider-custom.divider-light .divider-custom-icon {
  color: #fff;
}

.btn-xl {
  padding: 1rem 1.75rem;
  font-size: 1.25rem;
}

.btn-social {
  border-radius: 100%;
  display: inline-flex;
  width: 3.25rem;
  height: 3.25rem;
  font-size: 1.25rem;
  justify-content: center;
  align-items: center;
}

#mainNav {
  padding-top: 1rem;
  padding-bottom: 1rem;
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-weight: 700;
}
#mainNav .navbar-brand {
  color: #fff;
}
#mainNav .navbar-nav {
  margin-top: 1rem;
}
#mainNav .navbar-nav li.nav-item a.nav-link {
  color: #fff;
}
#mainNav .navbar-nav li.nav-item a.nav-link:hover {
  color: #1abc9c;
}
#mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
  color: #fff;
}
#mainNav .navbar-nav li.nav-item a.nav-link.active {
  color: #1abc9c;
}
#mainNav .navbar-toggler {
  font-size: 80%;
  padding: 0.8rem;
}

@media (min-width: 992px) {
  #mainNav {
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
    transition: padding-top 0.3s, padding-bottom 0.3s;
  }
  #mainNav .navbar-brand {
    font-size: 1.75em;
    transition: font-size 0.3s;
  }
  #mainNav .navbar-nav {
    margin-top: 0;
  }
  #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
    color: #fff;
    background: #1abc9c;
  }
  #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
    color: #fff;
    background: #1abc9c;
  }

  #mainNav.navbar-shrink {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
  }
  #mainNav.navbar-shrink .navbar-brand {
    font-size: 1.5em;
  }
}
.form-floating input.form-control,
.form-floating textarea.form-control {
  font-size: 1.5rem;
  border-left: 0;
  border-right: 0;
  border-top: 0;
  border-radius: 0;
  border-width: 1px;
}
.form-floating input.form-control:focus,
.form-floating textarea.form-control:focus {
  box-shadow: none;
}
.form-floating label {
  font-size: 1.5rem;
  color: #fff;
}

.masthead {
  padding-top: calc(6rem + 74px);
  padding-bottom: 6rem;
}
.masthead .masthead-heading {
  font-size: 2.75rem;
  line-height: 2.75rem;
}
.masthead .masthead-subheading {
  font-size: 1.25rem;
}
.masthead .masthead-avatar {
  width: 15rem;
}

.masthead-avatar {
  border-radius: 100%;
}

.trybe {
  color: white;
}

.trybe:hover {
  color: grey;
}

@media (min-width: 992px) {
  .masthead {
    padding-top: calc(6rem + 104px);
    padding-bottom: 6rem;
  }
  .masthead .masthead-heading {
    font-size: 4rem;
    line-height: 3.5rem;
  }
  .masthead .masthead-subheading {
    font-size: 1.5rem;
  }
}
.portfolio .portfolio-item {
  cursor: pointer;
  position: relative;
  display: block;
  max-width: 25rem;
  border-radius: 0.5rem;
  overflow: hidden;
}
.portfolio .portfolio-item .portfolio-item-caption {
  position: absolute;
  top: 0;
  left: 0;
  transition: all 0.2s ease-in-out;
  opacity: 0;
  background-color: rgba(26, 188, 156, 0.9);
}
.portfolio .portfolio-item .portfolio-item-caption:hover {
  opacity: 1;
}
.portfolio .portfolio-item .portfolio-item-caption .portfolio-item-caption-content {
  font-size: 1.5rem;
}

.portfolio-modal .btn-close {
  color: #1abc9c;
  font-size: 2rem;
  padding: 1rem;
}
.portfolio-modal .portfolio-modal-title {
  font-size: 2.25rem;
  line-height: 2rem;
}
@media (min-width: 992px) {
  .portfolio-modal .portfolio-modal-title {
    font-size: 3rem;
    line-height: 2.5rem;
  }
}

.footer {
  padding-top: 5rem;
  padding-bottom: 5rem;
  background-color: #2c3e50;
  color: #fff;
}

.copyright {
  background-color: #1a252f;
}

.descrip {
  font-size: 15px;
}

#divEmail {
  color: red;
}

.formContact input, .formContact textarea {
  background-color: #121212;
}

.bg-light {
  width: 70px;
  height: 30px;
  border: 3px solid #000;
  border-radius: 60px;
  position: relative;
  cursor: pointer;
}

.bg-light:before {
  content: '';
  position: absolute;
  width: 20px;
  height: 20px;
  /* background: #000; */
  border-left: 5.5px solid #000;
  border-radius: 100%;
  transform: rotate(-40deg);
  /* top: 50%; */
  left: 8px;
  /* transform: translateY(-50%); */
  transition: 0.3s;
}

.bg-light.active:before {
  border: 1px solid yellow;
  background: yellow;
  top: 10%;
  border-radius: 50%;
  left: 35px;
}

.text-secondary.active {
  color: rgb(44, 62, 80) !important;
  transition: 0.3s;
}

.text-secondary {
  transition: 0.3s;
}

#portfolio.active, #contact.active {
  background: #fff;
  transition: 0.3s;
}

#portfolio, #contact {
  transition: 0.3s;
}

.divider-black.active {
  color: #2c3e50 !important;
  transition: 0.3s;
}

.divider-black {
  transition: 0.3s;
}

.divider-custom-line.active {
  background-color: #2c3e50 !important;
  transition: 0.3s;
}

.divider-custom-line {
  transition: 0.3s;
}

.textForm.active {
  color: #6c757d !important;
  transition: 0.3s;
}

.textForm {
  transition: 0.3s;
}

.bg-form.active {
  background-color: #fff !important;
  transition: 0.3s;
}

.bg-form {
  color: #fff;
  transition: 0.3s;
}

.bg-form.active {
  color: #212529;
}

.bg-form:focus {
  background-color: #121212;
}

.send-light.active {
  background-color: #1abc9c !important;
  border-color: #1abc9c !important;
  transition: 0.3s;
}

.send-light {
  transition: 0.3s;
}

